feat: port 2.5.0 to Forge 1.20.1