@@ -18,14 +18,15 @@
 
 package plus.dragons.createenchantmentindustry.integration.apotheosis.common.kinetics.fan.salvaging;
 
-import com.simibubi.create.content.processing.recipe.ProcessingRecipeParams;
-import com.simibubi.create.content.processing.recipe.StandardProcessingRecipe;
+import com.simibubi.create.content.processing.recipe.ProcessingRecipe;
+import com.simibubi.create.content.processing.recipe.ProcessingRecipeBuilder;
+import com.simibubi.create.content.processing.recipe.ProcessingRecipeBuilder.ProcessingRecipeParams;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.item.crafting.SingleRecipeInput;
+import net.minecraft.world.Container;
 import net.minecraft.world.level.Level;
 import plus.dragons.createenchantmentindustry.integration.apotheosis.common.registry.CEIAXRecipes;
 
-public class SalvagingRecipe extends StandardProcessingRecipe<SingleRecipeInput> {
+public class SalvagingRecipe extends ProcessingRecipe<Container> {
     public SalvagingRecipe(ProcessingRecipeParams params) {
         super(CEIAXRecipes.SALVAGING, params);
     }
@@ -41,11 +42,11 @@ public class SalvagingRecipe extends StandardProcessingRecipe<SingleRecipeInput>
     }
 
     @Override
-    public boolean matches(SingleRecipeInput input, Level level) {
-        return getIngredients().getFirst().test(input.item());
+    public boolean matches(Container input, Level level) {
+        return !ingredients.isEmpty() && ingredients.get(0).test(input.getItem(0));
     }
 
-    public static Builder<SalvagingRecipe> builder(ResourceLocation id) {
-        return new Builder<>(SalvagingRecipe::new, id);
+    public static ProcessingRecipeBuilder<SalvagingRecipe> builder(ResourceLocation id) {
+        return new ProcessingRecipeBuilder<>(SalvagingRecipe::new, id);
     }
 }
