@@ -22,15 +22,13 @@ import static com.simibubi.create.compat.jei.category.CreateRecipeCategory.*;
 
 import com.simibubi.create.AllBlocks;
 import com.simibubi.create.compat.jei.DoubleItemIcon;
+import com.simibubi.create.foundation.fluid.FluidIngredient;
 import com.simibubi.create.foundation.gui.AllGuiTextures;
-import dev.shadowsoffire.apothic_enchanting.ApothicEnchanting;
-import dev.shadowsoffire.apothic_enchanting.util.MiscUtil;
-import dev.shadowsoffire.apothic_enchanting.util.TooltipUtil;
-import java.util.Arrays;
+import dev.shadowsoffire.apotheosis.util.ApothMiscUtil;
+import mezz.jei.api.forge.ForgeTypes;
 import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
 import mezz.jei.api.gui.drawable.IDrawable;
 import mezz.jei.api.gui.ingredient.IRecipeSlotsView;
-import mezz.jei.api.neoforge.NeoForgeTypes;
 import mezz.jei.api.recipe.IFocusGroup;
 import mezz.jei.api.recipe.RecipeIngredientRole;
 import mezz.jei.api.recipe.RecipeType;
@@ -40,9 +38,7 @@ import net.minecraft.client.gui.Font;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.item.crafting.RecipeHolder;
-import net.neoforged.neoforge.fluids.FluidStack;
-import net.neoforged.neoforge.fluids.crafting.SizedFluidIngredient;
+import net.minecraftforge.fluids.FluidStack;
 import org.jetbrains.annotations.Nullable;
 import plus.dragons.createenchantmentindustry.integration.apothic_enchanting.common.processing.infuser.InfusingRecipe;
 import plus.dragons.createenchantmentindustry.integration.apothic_enchanting.common.registry.CEIABlocks;
@@ -52,15 +48,17 @@ import plus.dragons.createenchantmentindustry.integration.apothic_enchanting.int
 import plus.dragons.createenchantmentindustry.integration.apothic_enchanting.util.CEIALang;
 import plus.dragons.createenchantmentindustry.mixin.accessor.CreateRecipeCategoryAccessor;
 
-public class InfusingCategory implements IRecipeCategory<RecipeHolder<InfusingRecipe>> {
-    public static final RecipeType<RecipeHolder<InfusingRecipe>> TYPE = RecipeType.createRecipeHolderType(CEIARecipes.INFUSING.getId());
+public class InfusingCategory implements IRecipeCategory<InfusingRecipe> {
+    public static final RecipeType<InfusingRecipe> TYPE = new RecipeType<>(
+            CEIARecipes.INFUSING.getId(), InfusingRecipe.class);
     private static final Component title = CEIALang.translate("recipe.infusing").component();
     private static final IDrawable icon = new DoubleItemIcon(CEIABlocks.INFUSER::asStack, AllBlocks.BASIN::asStack);
-    private static final ResourceLocation TEXTURES = ApothicEnchanting.loc("textures/gui/enchanting_jei.png");
+    private static final ResourceLocation TEXTURES = new ResourceLocation(
+            "apotheosis", "textures/gui/enchanting_jei.png");
     private final AnimatedInfuser infuser = new AnimatedInfuser();
 
     @Override
-    public RecipeType<RecipeHolder<InfusingRecipe>> getRecipeType() {
+    public RecipeType<InfusingRecipe> getRecipeType() {
         return TYPE;
     }
 
@@ -86,38 +84,39 @@ public class InfusingCategory implements IRecipeCategory<RecipeHolder<InfusingRe
 
     @SuppressWarnings("removal") // See CreateRecipeCategory#addPotionTooltip
     @Override
-    public void setRecipe(IRecipeLayoutBuilder builder, RecipeHolder<InfusingRecipe> holder, IFocusGroup focuses) {
-        var recipe = holder.value();
+    public void setRecipe(IRecipeLayoutBuilder builder, InfusingRecipe recipe, IFocusGroup focuses) {
         int x = 36;
         int y = 37;
         if (!recipe.getIngredients().isEmpty()) {
             builder.addSlot(RecipeIngredientRole.INPUT, x, y)
                     .setBackground(getRenderedSlot(), -1, -1)
-                    .addIngredients(recipe.getIngredients().getFirst());
+                    .addIngredients(recipe.getIngredients().get(0));
         } else {
             builder.addSlot(RecipeIngredientRole.INPUT, x, y)
                     .setBackground(getRenderedSlot(), -1, -1)
-                    .addIngredients(NeoForgeTypes.FLUID_STACK, Arrays.stream(recipe.getFluidIngredients().getFirst().getFluids()).toList())
+                    .addIngredients(ForgeTypes.FLUID_STACK, recipe.getFluidIngredients().get(0).getMatchingFluidStacks())
                     .setFluidRenderer(1, false, 16, 16)
                     .addTooltipCallback(CreateRecipeCategoryAccessor::invokeAddPotionTooltip);
         }
 
-        var reagent = SizedFluidIngredient.of(CEIAFluids.MOD_TAGS.infusing_ingredients, MiscUtil.getExpCostForSlot((int) recipe.getParams().getStats().eterna(), 0));
+        var reagent = FluidIngredient.fromTag(
+                CEIAFluids.MOD_TAGS.infusing_ingredients,
+                ApothMiscUtil.getExpCostForSlot((int) recipe.getStats().eterna(), 0));
         builder.addSlot(RecipeIngredientRole.INPUT, 120, 7)
                 .setBackground(getRenderedSlot(), -1, -1)
-                .addIngredients(NeoForgeTypes.FLUID_STACK, Arrays.asList(reagent.getFluids()))
+                .addIngredients(ForgeTypes.FLUID_STACK, reagent.getMatchingFluidStacks())
                 .setFluidRenderer(1, false, 16, 16)
                 .addTooltipCallback(CreateRecipeCategoryAccessor::invokeAddPotionTooltip);
 
         x = 142;
         if (!recipe.getRollableResults().isEmpty()) {
-            var result = recipe.getRollableResults().getFirst();
+            var result = recipe.getRollableResults().get(0);
             builder.addSlot(RecipeIngredientRole.OUTPUT, x, y)
                     .setBackground(getRenderedSlot(result), -1, -1)
                     .addItemStack(result.getStack())
                     .addRichTooltipCallback(addStochasticTooltip(result));
         } else {
-            var fluid = recipe.getFluidResults().getFirst();
+            var fluid = recipe.getFluidResults().get(0);
             builder.addSlot(RecipeIngredientRole.OUTPUT, x, y)
                     .setBackground(getRenderedSlot(), -1, -1)
                     .addFluidStack(fluid.getFluid(), fluid.getAmount())
@@ -127,24 +126,24 @@ public class InfusingCategory implements IRecipeCategory<RecipeHolder<InfusingRe
     }
 
     @Override
-    public void draw(RecipeHolder<InfusingRecipe> recipe, IRecipeSlotsView recipeSlotsView, GuiGraphics guiGraphics, double mouseX, double mouseY) {
+    public void draw(InfusingRecipe recipe, IRecipeSlotsView recipeSlotsView, GuiGraphics guiGraphics, double mouseX, double mouseY) {
         AllGuiTextures.JEI_DOWN_ARROW.render(guiGraphics, 136, 18);
         AllGuiTextures shadow = AllGuiTextures.JEI_SHADOW;
         shadow.render(guiGraphics, 79, 54);
 
         var fluid = recipeSlotsView.getSlotViews().get(1)
-                .getDisplayedIngredient(NeoForgeTypes.FLUID_STACK)
+                .getDisplayedIngredient(ForgeTypes.FLUID_STACK)
                 .orElse(FluidStack.EMPTY);
-        infuser.with(fluid, recipe.value().getParams().getStats()).draw(guiGraphics, getWidth() / 2 + 3, 20);
+        infuser.with(fluid, recipe.getStats()).draw(guiGraphics, getWidth() / 2 + 3, 20);
 
         guiGraphics.blit(TEXTURES, 0, 0, 5, 26, 7, 7, 256, 256);
         guiGraphics.blit(TEXTURES, 0, 10, 5, 36, 7, 7, 256, 256);
         guiGraphics.blit(TEXTURES, 0, 20, 5, 46, 7, 7, 256, 256);
 
-        var stats = recipe.value().getParams().getStats();
+        var stats = recipe.getStats();
         Font font = Minecraft.getInstance().font;
-        guiGraphics.drawString(font, TooltipUtil.lang("gui", "enchant.eterna").append(Component.literal(" " + stats.eterna())), 9, 0, 0x3DB53D, false);
-        guiGraphics.drawString(font, TooltipUtil.lang("gui", "enchant.quanta").append(Component.literal(" " + stats.quanta() + "%")), 9, 10, 0xFC5454, false);
-        guiGraphics.drawString(font, TooltipUtil.lang("gui", "enchant.arcana").append(Component.literal(" " + stats.arcana() + "%")), 9, 20, 0xA800A8, false);
+        guiGraphics.drawString(font, Component.translatable("gui.apotheosis.enchant.eterna").append(Component.literal(" " + stats.eterna())), 9, 0, 0x3DB53D, false);
+        guiGraphics.drawString(font, Component.translatable("gui.apotheosis.enchant.quanta").append(Component.literal(" " + stats.quanta() + "%")), 9, 10, 0xFC5454, false);
+        guiGraphics.drawString(font, Component.translatable("gui.apotheosis.enchant.arcana").append(Component.literal(" " + stats.arcana() + "%")), 9, 20, 0xA800A8, false);
     }
 }
