@@ -34,22 +34,21 @@ import mezz.jei.api.recipe.RecipeType;
 import mezz.jei.api.recipe.category.IRecipeCategory;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.network.chat.Component;
-import net.minecraft.world.item.crafting.RecipeHolder;
 import org.jetbrains.annotations.Nullable;
 import plus.dragons.createenchantmentindustry.common.kinetics.grindstone.GrindingRecipe;
 import plus.dragons.createenchantmentindustry.common.registry.CEIBlocks;
 import plus.dragons.createenchantmentindustry.common.registry.CEIRecipes;
 import plus.dragons.createenchantmentindustry.util.CEILang;
 
-public class GrindingCategory implements IRecipeCategory<RecipeHolder<GrindingRecipe>> {
-    public static final RecipeType<RecipeHolder<GrindingRecipe>> TYPE = RecipeType
-            .createRecipeHolderType(CEIRecipes.GRINDING.getId());
+public class GrindingCategory implements IRecipeCategory<GrindingRecipe> {
+    public static final RecipeType<GrindingRecipe> TYPE = new RecipeType<>(
+            CEIRecipes.GRINDING.getId(), GrindingRecipe.class);
     private final Component title = CEILang.translate("recipe.grinding").component();
     private final IDrawable icon = new ItemIcon(CEIBlocks.GRINDSTONE_DRAIN::asStack);
     private final AnimatedGrindstone grindstone = new AnimatedGrindstone();
 
     @Override
-    public RecipeType<RecipeHolder<GrindingRecipe>> getRecipeType() {
+    public RecipeType<GrindingRecipe> getRecipeType() {
         return TYPE;
     }
 
@@ -74,8 +73,7 @@ public class GrindingCategory implements IRecipeCategory<RecipeHolder<GrindingRe
     }
 
     @Override
-    public void setRecipe(IRecipeLayoutBuilder builder, RecipeHolder<GrindingRecipe> holder, IFocusGroup focuses) {
-        var recipe = holder.value();
+    public void setRecipe(IRecipeLayoutBuilder builder, GrindingRecipe recipe, IFocusGroup focuses) {
         var ingredient = recipe.getIngredients().get(0);
         builder.addSlot(RecipeIngredientRole.INPUT, 27, 32)
                 .setBackground(getRenderedSlot(), -1, -1)
@@ -83,14 +81,14 @@ public class GrindingCategory implements IRecipeCategory<RecipeHolder<GrindingRe
 
         var fluidIngredients = recipe.getFluidIngredients();
         if (!fluidIngredients.isEmpty()) {
-            CreateRecipeCategory.addFluidSlot(builder, 27, 51, fluidIngredients.getFirst());
+            CreateRecipeCategory.addFluidSlot(builder, 27, 51, fluidIngredients.get(0));
         }
 
         List<ProcessingOutput> results = recipe.getRollableResults();
         int i = 0;
         var fluidResults = recipe.getFluidResults();
         if (!fluidResults.isEmpty()) {
-            CreateRecipeCategory.addFluidSlot(builder, 130, 32, fluidResults.getFirst());
+            CreateRecipeCategory.addFluidSlot(builder, 130, 32, fluidResults.get(0));
             i++;
         }
         for (ProcessingOutput output : results) {
@@ -105,7 +103,7 @@ public class GrindingCategory implements IRecipeCategory<RecipeHolder<GrindingRe
     }
 
     @Override
-    public void draw(RecipeHolder<GrindingRecipe> recipe, IRecipeSlotsView recipeSlotsView, GuiGraphics graphics, double mouseX, double mouseY) {
+    public void draw(GrindingRecipe recipe, IRecipeSlotsView recipeSlotsView, GuiGraphics graphics, double mouseX, double mouseY) {
         AllGuiTextures.JEI_DOWN_ARROW.render(graphics, 115, 5);
         AllGuiTextures.JEI_SHADOW.render(graphics, 61, 52);
         grindstone.draw(graphics, 68, 32);
